HTML File changes

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@ body {
 </style>
 <body>
 <center>
-<span style='font-size:100px;'>&#128640;</span>
+<span style='font-size:100px;'>&#128640;</span><br>
 <span style='font-size:100px;'>&#128508;</span>
 <h1>Devops</h1>
 <h2>Technology</h2>
